apps/matomo/templates/log-importer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo-log-importer
  namespace: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo-log-importer
  template:
    metadata:
      labels:
        app: matomo-log-importer
    spec:
      serviceAccountName: matomo-log-importer
      containers:
        - name: importer
          image: python:3.11-slim
          command:
            - /bin/bash
            - -c
            - |
              [...]
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
              cpu: 50m
