apps/matomo/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matomo
  namespace: matomo
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Matomo"
    gethomepage.dev/description: "Web Analytics"
    gethomepage.dev/icon: "matomo.png"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - "matomo.ganam.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: matomo
          port: 80
          weight: 1
